Booking api changes

--- a/ticket-service-backend/src/main/resources/application.properties
+++ b/ticket-service-backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=ticket-service
+
+spring.datasource.url=jdbc:h2:mem:ticketdb;DB_CLOSE_DELAY=-1;LOCK_MODE=3
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=myapp123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#server configuration
+server.port = 8080
+
